--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -12,6 +12,8 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>NSContactsUsageDescription</key>
+    <string>This app requires contacts access to function properly.</string>
 	<key>CFBundleName</key>
 	<string>contacts_plugin_example</string>
 	<key>CFBundlePackageType</key>
