更新Android进入选择联系人页面,不选择直接返回出现的数据异常bug

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: contacts_plugin
 description: Contacts Flutter project.
 version: 0.0.1
-homepage:
+homepage: https://github.com/coolxinxin/ContactsPlugin
 
 environment:
   sdk: ">=2.15.0-233.0.dev <3.0.0"
