插件名称有相同,修改插件名

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: contacts_plugin
+name: flutter_contacts_plugin
 description: Contacts Flutter project.
 version: 0.0.1
 homepage: https://github.com/coolxinxin/ContactsPlugin
