插件名冲突,修改插件名

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_contacts_plugin
-description: Contacts Flutter project.
+name: contacts_plugin_plus
+description: Contacts Flutter plugin.
 version: 0.0.1
 homepage: https://github.com/coolxinxin/ContactsPlugin
 
