--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_contacts_plugin:
+  contacts_plugin_plus:
     # When depending on this package from a real application you should use:
     #   contacts_plugin: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
